# normalize

./: .env.example  .gitignore  .oxlintrc.json  ARCHITECTURE.md  Architecture.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  GEMINI.md  LLMS.md  POLISH.md  README.md  SUMMARY.md  StyleGuide.py  TODO.md  action.yml  flake.nix  install.ps1  install.sh  mkdocs.yml  package.json  pyproject.toml  result  rust-toolchain.toml
benches/: Cargo.toml  SUMMARY.md
benches/benches/: SUMMARY.md  cli_commands.rs  rules_runner.rs  structure_rebuild.rs
crates/moss-cli/: Cargo.toml
crates/moss-cli/src/: analyze.rs  anchors.rs  cfg.rs  complexity.rs  config.rs  daemon.rs  deps.rs  edit.rs  external_packages.rs  extract.rs  go_mod.rs  health.rs  index.rs  main.rs  overview.rs  parsers.rs  path_resolve.rs  scopes.rs  skeleton.rs  summarize.rs  symbols.rs  tree.rs
crates/moss-cli/src/commands/: analyze.rs  filter.rs  index.rs  lint.rs  mod.rs  package.rs  plans.rs  sessions.rs  view.rs  view_cmd.rs  workflow.rs
crates/moss-cli/src/serve/: http.rs  lsp.rs
crates/moss-cli/src/sessions/: analysis.rs
crates/moss-cli/src/workflow/: config.rs  execute.rs  llm.rs  lua_runtime.rs  mod.rs
crates/moss-codegen/: Cargo.toml
crates/moss-codegen/src/: ir.rs  lib.rs
crates/moss-codegen/src/input/: mod.rs  openapi.rs
crates/moss-codegen/src/output/: go.rs  mod.rs  pydantic.rs  python.rs  rust.rs  typescript.rs  valibot.rs  zod.rs
crates/moss-codegen/tests/: codegen.rs
crates/moss-codegen/tests/fixtures/: events.json  petstore.json  user.json
crates/moss-codegen/tests/snapshots/: codegen__go_types_no_tags.snap  codegen__go_types_user.snap  (+18 more)
crates/moss-languages/: Cargo.toml
crates/moss-languages/src/: ada.rs  agda.rs  asciidoc.rs  asm.rs  ast_grep.rs  awk.rs  bash.rs  batch.rs  c.rs  c_cpp.rs  caddy.rs  capnp.rs  clojure.rs  cmake.rs  commonlisp.rs  component.rs  cpp.rs  csharp.rs  css.rs  d.rs  dart.rs  devicetree.rs  diff.rs  dockerfile.rs  dot.rs  ecmascript.rs  elisp.rs  elixir.rs  elm.rs  erlang.rs  external_packages.rs  fish.rs  fsharp.rs  gleam.rs  glsl.rs  go.rs  grammar_loader.rs  graphql.rs  groovy.rs  haskell.rs  (+66 more)
crates/moss-sessions/: Cargo.toml
crates/moss-sessions/src/: analysis.rs  lib.rs
crates/moss-surface-syntax/: Cargo.toml
crates/moss-surface-syntax/src/: lib.rs
crates/moss-tools/: Cargo.toml
crates/moss-tools/src/: custom.rs  diagnostic.rs  lib.rs  registry.rs  sarif.rs
crates/moss-typegen/: Cargo.toml
crates/moss-typegen/src/: lib.rs
crates/moss-typegen/tests/: codegen.rs
crates/normalize-architecture/: Cargo.toml  SUMMARY.md
crates/normalize-architecture/src/: SUMMARY.md  architecture.rs  depth_map.rs  layering.rs  lib.rs  output.rs  service.rs
crates/normalize-budget/: Cargo.toml  SUMMARY.md
crates/normalize-budget/src/: SUMMARY.md  budget.rs  error.rs  git_ops.rs  lib.rs  service.rs
crates/normalize-ca-cache/: Cargo.toml  SUMMARY.md
crates/normalize-ca-cache/src/: SUMMARY.md  lib.rs
crates/normalize-cfg/: Cargo.toml  SUMMARY.md
crates/normalize-cfg/src/: SUMMARY.md  builder.rs  lib.rs  mermaid.rs  service.rs
crates/normalize-cfg/tests/: SUMMARY.md  coverage_matrix.rs  go_cfg.rs  java_cfg.rs  javascript_cfg.rs  jinja2_cfg.rs  lua_cfg.rs  python_cfg.rs  rust_cfg.rs  typescript_cfg.rs
crates/normalize-chat-sessions/: Cargo.toml  SUMMARY.md
crates/normalize-chat-sessions/src/: SUMMARY.md  lib.rs  session.rs
crates/normalize-chat-sessions/tests/: cline_roo_tests.rs  codex_gemini_tests.rs
crates/normalize-cli-parser/: Cargo.toml  SUMMARY.md
crates/normalize-cli-parser/fixtures/: SUMMARY.md
crates/normalize-cli-parser/src/: SUMMARY.md  lib.rs
crates/normalize-cli-parser/tests/: SUMMARY.md  argparse_fixtures.rs  clap_fixtures.rs  click_fixtures.rs  cobra_fixtures.rs  commander_fixtures.rs  yargs_fixtures.rs
crates/normalize-code-similarity/: Cargo.toml  SUMMARY.md
crates/normalize-code-similarity/src/: SUMMARY.md  clusters.rs  duplicates.rs  duplicates_views.rs  fragments.rs  lib.rs  service.rs
crates/normalize-config-paths/: Cargo.toml
crates/normalize-config-paths/src/: lib.rs
crates/normalize-context/: Cargo.toml  SUMMARY.md
crates/normalize-context/src/: SUMMARY.md  lib.rs
crates/normalize-core/: Cargo.toml  SUMMARY.md
crates/normalize-core/src/: SUMMARY.md  lib.rs  merge.rs
crates/normalize-deps/: Cargo.toml  SUMMARY.md
crates/normalize-deps/src/: SUMMARY.md  lib.rs
crates/normalize-ecosystems/: Cargo.toml  SUMMARY.md
crates/normalize-ecosystems/src/: SUMMARY.md  cache.rs  doc_tree.rs  docs_rs.rs  go_docs.rs  http.rs  lib.rs  local_docs.rs  python_docs.rs  source_archive.rs  symbol_docs.rs
crates/normalize-edit/: Cargo.toml  SUMMARY.md
crates/normalize-edit/src/: SUMMARY.md  lib.rs
crates/normalize-facts/: Cargo.toml  SUMMARY.md
crates/normalize-facts-rules-api/: Cargo.toml  SUMMARY.md
crates/normalize-facts-rules-api/src/: SUMMARY.md  diagnostic.rs  lib.rs  relations.rs  rule_pack.rs
crates/normalize-facts-rules-builtins/: Cargo.toml  SUMMARY.md
crates/normalize-facts-rules-builtins/src/: SUMMARY.md  circular_deps.rs  lib.rs
crates/normalize-facts-rules-interpret/: Cargo.toml  SUMMARY.md
crates/normalize-facts-rules-interpret/src/: SUMMARY.md  lib.rs  tests.rs
crates/normalize-facts/src/: SUMMARY.md  ca_cache.rs  cfg_dataflow.rs  extract.rs  extraction_fixtures.rs  index.rs  lib.rs  main.rs  parsers.rs  paths.rs  service.rs  symbols.rs
crates/normalize-facts/tests/: SUMMARY.md  extract_fixtures.rs
crates/normalize-filter/: Cargo.toml  SUMMARY.md
crates/normalize-filter/src/: SUMMARY.md  lib.rs  main.rs  service.rs
crates/normalize-git/: Cargo.toml  SUMMARY.md
crates/normalize-git-history/: Cargo.toml
crates/normalize-git-history/src/: activity.rs  complexity.rs  contributors.rs  coupling.rs  coupling_clusters.rs  hotspots.rs  lib.rs  ownership.rs  repo_coupling.rs  service.rs
crates/normalize-git/src/: SUMMARY.md  lib.rs
crates/normalize-graph/: Cargo.toml  SUMMARY.md
crates/normalize-graph/src/: SUMMARY.md  lib.rs  report.rs  service.rs
(+3537 files in other folders)
