[workspace]
resolver = "2"
default-members = ["crates/normalize"]
exclude = ["crates/normalize-cli-parser/fixtures"]
members = [
    "crates/normalize",
    "crates/normalize-cli-parser",
    "crates/normalize-surface-syntax",
    "crates/normalize-typegen",
    "crates/normalize-core",
    "crates/normalize-derive",
    "crates/normalize-facts-core",
    "crates/normalize-grammars",
    "crates/normalize-languages",
    "crates/normalize-language-meta",
    "crates/normalize-openapi",
    "crates/normalize-ecosystems",
    "crates/normalize-package-index",
    "crates/normalize-syntax-rules",
    "crates/normalize-chat-sessions",
    "crates/normalize-tools",
    "crates/normalize-local-deps",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/normalize"

[workspace.dependencies]
# Core
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
axum = "0.8"

# Database
libsql = "0.9"

# File system
walkdir = "2"
ignore = "0.4"  # gitignore-aware walking
notify = "7"    # filesystem watching
dirs = "5"      # home directory lookup

# Fuzzy matching
nucleo-matcher = "0.3"

# Parallelism
rayon = "1.10"

# Search (ripgrep crates)
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"

# Dynamic loading
libloading = "0.8"

# Minimize debug build size (full debug info adds ~2GB)
[profile.dev]
debug = 0
split-debuginfo = "unpacked"  # Faster incremental builds on Linux

# Speed up proc-macro and build-script builds
[profile.dev.build-override]
opt-level = 3

# Optimize release builds for size
[profile.release]
lto = true
codegen-units = 1
strip = true

