[workspace]
resolver = "2"
default-members = ["crates/normalize"]
exclude = ["crates/normalize-cli-parser/fixtures"]
members = [
    "crates/normalize",
    "crates/normalize-manifest",
    "crates/normalize-cli-parser",
    "crates/normalize-surface-syntax",
    "crates/normalize-typegen",
    "crates/normalize-core",
    "crates/normalize-derive",
    "crates/normalize-facts",
    "crates/normalize-facts-core",
    "crates/normalize-facts-rules-api",
    "crates/normalize-grammars",
    "crates/normalize-languages",
    "crates/normalize-language-meta",
    "crates/normalize-openapi",
    "crates/normalize-ecosystems",
    "crates/normalize-package-index",
    "crates/normalize-syntax-rules",
    "crates/normalize-chat-sessions",
    "crates/normalize-sessions",
    "crates/normalize-tools",
    "crates/normalize-local-deps",
    "crates/normalize-output",
    "crates/normalize-session-analysis",
    "crates/normalize-facts-rules-interpret",

    "crates/normalize-git",
    "crates/normalize-path-resolve",
    "crates/normalize-shadow",
    "crates/normalize-edit",
    "crates/normalize-deps",
    "crates/normalize-filter",
    "crates/normalize-scope",
    "crates/normalize-graph",
    "crates/normalize-code-similarity",
    "crates/normalize-rank",
    "crates/normalize-architecture",
    "crates/normalize-metrics",
    "crates/normalize-budget",
    "crates/normalize-native-rules",
    "crates/normalize-ratchet",
    "crates/normalize-rules",
    "crates/normalize-rules-config",
    "crates/normalize-refactor",
    "crates/normalize-context",
    "crates/normalize-knowledge-graph",
    "crates/normalize-semantic",
    "crates/normalize-module-resolve",
    "crates/normalize-cfg",
    "xtask",
    "benches",
]

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/normalize"

[workspace.dependencies]
# Core
clap = { version = "4", features = ["derive", "color"] }
blake3 = "1"
bincode = "1"
rkyv = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async
tokio = { version = "1", features = ["full"] }
axum = "0.8"

# Database
# Local-only by default; the remote/replication stack (tonic, tonic-web,
# libsql_replication + the transitive duplicate axum 0.6/hyper 0.14) is opt-in
# via the `remote-sqld` feature on normalize-facts. See docs/architecture-decisions.md.
libsql = { version = "0.9", default-features = false, features = ["core"] }

# File system
walkdir = "2"
ignore = "0.4"  # gitignore-aware walking
notify = "7"    # filesystem watching
dirs = "5"      # home directory lookup

# Fuzzy matching
nucleo-matcher = "0.3"

# Datalog interpreter
ascent-interpreter = { version = "0.2.1-alpha.1", default-features = false }

# Parallelism
rayon = "1.10"

# Progress bars
indicatif = { version = "0.17", features = ["rayon"] }

# Search (ripgrep crates)
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"

# jq implementation (jaq-fmts excluded — vanilla jq is JSON-only, formats in TODO)
jaq-core = "3.1.0"
jaq-std = "3.0.1"
jaq-json = { version = "2.0.1", features = ["serde"] }

# Dynamic loading (grammar .so files for tree-sitter; NOT used for rule packs)
libloading = "0.8"

# TOML parsing
toml = "0.8"

# XML parsing (read-only tree)
roxmltree = "0.21"

# Intra-workspace crates available as workspace deps
normalize-git = { path = "crates/normalize-git", version = "0.3.2" }

# Git library (pure-Rust, no PATH dependency)
# sha1: required hash algorithm; revision: walk commits/resolve refs;
# blob-diff: tree-to-tree diffs; index: read tracked files from git index
# blame: git blame API; status: index-vs-worktree status checks
gix = { version = "0.81", default-features = false, features = ["sha1", "revision", "blob-diff", "index", "blame", "status"] }

# Service framework
server-less = { version = "0.7", default-features = false, features = ["cli", "jsonschema", "config"] }

# JSON Schema validation
jsonschema = "0.26"

# Minimize debug build size (full debug info adds ~2GB)
[profile.dev]
debug = 0
split-debuginfo = "unpacked"  # Faster incremental builds on Linux

# Speed up proc-macro and build-script builds
[profile.dev.build-override]
opt-level = 3

# Optimize release builds for size
[profile.release]
lto = true
codegen-units = 1
strip = true

