[package]
name = "moss-cli"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Fast CLI for moss code intelligence"

[[bin]]
name = "moss"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
ignore.workspace = true
nucleo-matcher.workspace = true
rusqlite.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true

[dev-dependencies]
tempfile = "3"
