[package]
name = "rhizome-moss-tools"
version = "0.1.0"
edition = "2024"
description = "Unified interface for external development tools (linters, formatters, type checkers)"

[features]
default = ["tools-all"]

# All tools
tools-all = ["tools-python", "tools-javascript", "tools-rust", "tools-go"]

# Language-grouped tools
tools-python = ["tool-ruff", "tool-mypy", "tool-pyright", "tool-pytest"]
tools-javascript = ["tool-oxlint", "tool-oxfmt", "tool-eslint", "tool-biome", "tool-prettier", "tool-tsc", "tool-tsgo", "tool-deno", "tool-bun", "tool-npm"]
tools-rust = ["tool-clippy", "tool-rustfmt", "tool-cargo"]
tools-go = ["tool-gofmt", "tool-govet", "tool-go"]

# Individual tools - Python
tool-ruff = []
tool-mypy = []
tool-pyright = []
tool-pytest = []

# Individual tools - JavaScript/TypeScript
tool-oxlint = []
tool-oxfmt = []
tool-eslint = []
tool-biome = []
tool-prettier = []
tool-tsc = []
tool-tsgo = []
tool-deno = []
tool-bun = []
tool-npm = []

# Individual tools - Rust
tool-clippy = []
tool-rustfmt = []
tool-cargo = []

# Individual tools - Go
tool-gofmt = []
tool-govet = []
tool-go = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
which = "7"
rayon.workspace = true
