[package]
name = "rhizome-moss-typegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Polyglot type and validator generation from schemas"

[features]
default = ["typescript", "python", "go", "rust-types"]

# Language umbrella flags
typescript = ["typescript-types", "typescript-validators"]
python = ["python-types", "python-validators"]
go = ["go-types"]
rust-types = []

# Per-language types
typescript-types = []
python-types = []
go-types = []

# Per-language validators (umbrella)
typescript-validators = ["zod", "valibot"]
python-validators = ["pydantic"]

# Individual validators
zod = ["typescript-types"]
valibot = ["typescript-types"]
yup = ["typescript-types"]
pydantic = ["python-types"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
