[package]
name = "normalize-architecture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Architectural metrics: coupling, cycles, layering, hubs"

[dependencies]
normalize-index = { path = "../normalize-index", version = "0.3.2" }
normalize-graph = { path = "../normalize-graph", version = "0.3.2" }
normalize-languages = { path = "../normalize-languages", version = "0.3.2" }
libsql.workspace = true
serde.workspace = true
schemars = "1"
