[package]
name = "normalize-budget"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Diff-based budget system for normalize: track how much a codebase is allowed to change"

[features]
default = []
cli = ["dep:server-less"]

[dependencies]
normalize-metrics = { path = "../normalize-metrics", version = "0.2.0" }
normalize-output = { path = "../normalize-output", version = "0.2.0" }
normalize-languages = { path = "../normalize-languages", version = "0.2.0" }
normalize-path-resolve = { path = "../normalize-path-resolve", version = "0.2.0" }
normalize-facts = { path = "../normalize-facts", version = "0.2.0" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = "1"
thiserror = "2"
rayon = "1.10"
tracing = "0.1"
streaming-iterator = "0.1"
tree-sitter = "0.26"
server-less = { version = "0.4.7", default-features = false, features = ["cli", "jsonschema", "config"], optional = true }
schemars = "1"
