[package]
name = "normalize-ca-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-addressed extraction cache for normalize"

[dependencies]
bincode = "1"
blake3 = "1"
rusqlite.workspace = true
serde = { workspace = true }
dirs = "5"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
