[package]
name = "normalize-chat-sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Session log parsing for AI coding agents"

[features]
default = ["formats-all"]

# All formats
formats-all = ["format-claude", "format-cline", "format-codex", "format-gemini", "format-normalize", "format-roo"]

# Individual formats
format-claude = []    # Claude Code sessions
format-cline = []     # Cline (saoudrizwan.claude-dev) sessions
format-codex = []     # OpenAI Codex CLI sessions
format-gemini = []    # Gemini CLI sessions
format-normalize = [] # normalize agent sessions
format-roo = []       # Roo-Code (rooveterinaryinc.roo-cline) sessions

# JSON Schema support (schemars derives on session types)
schema = ["dep:schemars"]

[dependencies]
serde = { version = "1", features = ["derive"] }
gix = { workspace = true }
serde_json = "1"
regex = "1"
thiserror = "2"
schemars = { version = "1", optional = true }
