[package]
name = "normalize-cli-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parse CLI --help output from various frameworks"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1"
