[package]
name = "normalize-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for the normalize code intelligence system"

[dependencies]
normalize-derive = { path = "../normalize-derive", version = "0.2.0" }
