[package]
name = "normalize-facts-rules-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Data types for normalize fact rules (Relations input, Diagnostic output)"

[dependencies]
# Datalog engine
ascent = "0.8"

# Serialization for diagnostics
serde = { workspace = true, features = ["derive"] }

# Zero-copy serialization for external-process rule protocol
rkyv = { workspace = true }
