[package]
name = "normalize-facts-rules-builtins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Builtin rules for normalize (cycles, coupling, orphans)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
normalize-facts-rules-api = { path = "../normalize-facts-rules-api", version = "0.1.0" }
abi_stable = "0.11"
ascent = "0.8"

[dev-dependencies]
# For testing rules
