[package]
name = "normalize-facts-rules-interpret"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interpreted Datalog rule evaluation for normalize code facts"

[dependencies]
normalize-facts-rules-api = { path = "../normalize-facts-rules-api", version = "0.2.0" }
abi_stable = "0.11"
normalize-core = { path = "../normalize-core", version = "0.2.0" }
normalize-rules-config = { path = "../normalize-rules-config", version = "0.2.0" }
ascent-interpreter.workspace = true
syn = { version = "2.0", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
glob = "0.3.3"
dirs = "5"
schemars = "1"
tracing = "0.1"
